[package]
name = "brute"
version = "0.1.0"
authors = ["Yechan Bae <yechan@gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7"
dashmap = "2.1.1"
sha2 = "0.8.0"
rand = "0.7"
core_affinity = "0.5.10"