[package]
name = "solver"
version = "0.1.0"
authors = ["Yechan Bae <qwazpia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.5.0"
dashmap = "3.11"
sha2 = "0.9.1"
rayon = "1.4"
parking_lot = "0.11"
