[package]
name = "floood"
version = "0.1.0"
authors = [
    "mansourah <malharthi9@gatech.edu>",
    "Qwaz <qwazpia@gmail.com>",
]
edition = "2018"

default-run = "floood"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"

socket2 = "0.3"

regex = "1.3"
ipnetwork = "0.16"

pretty-hex = "0.1"

# Example of customizing binaries in Cargo.toml.
[[bin]]
name = "floood"
test = false
bench = false


[[bin]]
name = "monitor"
test = false
bench = false
